--- a/css/style.css
+++ b/css/style.css
@@ -70,10 +70,10 @@ a{
 }
 
 .input-address {
-    width: 100%;
+    width: 70%;
     height: 40px;
     box-sizing: border-box;
-    background-image: url("../img/home.svg");
+    background-image: url("../img/icon/home.svg");
     background-size: 16px 16px;
 
 }
@@ -82,7 +82,7 @@ a{
 
 .input-search {
     width: 300px;
-    background-image: url("../img/search.svg");
+    background-image: url("../img/icon/search.svg");
     background-size: 18px 18px;
     margin-left: auto;/*флекс элемен прижмется  кправому краю контейнера*/
 }
@@ -633,7 +633,9 @@ a{
     display: none;
 }
 
-
+.error{
+    display: none;
+}
 
 
 /*адаптив*/
