--- a/css/style.css
+++ b/css/style.css
@@ -23,13 +23,17 @@ a{
     text-decoration: none;
 }
 
+
+img{
+    max-width: 100;
+    height: auto;
+}
+
 .container {
     max-width: 1200px;
     /*из макета ширина контента*/
     margin: 0 auto;
     /*ценртуем*/
-
-
     /*padding-left: 120px;
     padding-right: 120px;*/
 
@@ -48,7 +52,6 @@ a{
 
 .input {
     padding: 10px;
-    
     background-color: #FFFFFF;
     border: 1px solid #D9D9D9;
     box-sizing: border-box;
@@ -75,7 +78,6 @@ a{
     box-sizing: border-box;
     background-image: url("../img/icon/home.svg");
     background-size: 16px 16px;
-
 }
 
 
@@ -171,6 +173,24 @@ a{
     background-size: 800px 600px;
     margin-bottom: 56px;
 }
+
+.pizza {
+    background: #fff1b8 url(../img/promo/pizza.png) no-repeat top -100px right -250px / 830px
+}
+
+.kebab {
+    background: #D6E4FF url(../img/promo/kebab.png) no-repeat top 45px right 40px / 450px;
+}
+
+.vegetables {
+    background: #FFF566 url(../img/promo/vegetables.png) no-repeat top 0 right 0 / 825px
+}
+
+.sushi {
+    background: #FFF1F0 url(../img/promo/sushi.png) no-repeat top 10px right 15px / 500px
+}
+
+
 
 
 .promo-title {
